src/styles/catalogItem/index.module.scss
.catalog {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 24px;
  margin: 80px;

  &__list:first-child {
    grid-row-start: 1;
    grid-column-start: 1;
    grid-row-end: 3;
    grid-column-end: 3;
  }

  &__list:last-child {
    grid-row-start: 3;
    grid-column-start: 3;
    grid-row-end: 5;
    grid-column-end: 5;
  }

  &__list {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    &__item {
      background-color: #f5f5f5;
      width: 100%;
      height: 100%;
      font-family: 'Inter';
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: flex-end;
      position: relative;

      &__active {
        background: rgba(255, 255, 255, 0.6);
        position: absolute;
        width: 100%;
        height: 100%;

        &__wrapper {
          left: calc(50% - 60px);
          top: calc(50% - 48px);
          position: absolute;
        }

        &__button:first-child {
          margin-right: 24px;
        }

        &__button {
          background: none;
          border: none;
          width: 48px;
          height: 48px;
          cursor: pointer;
        }
      }

      &__image {
        width: 100%;
        height: 100%;
      }

      &__text {
        margin-top: 16px;
        display: flex;
        flex-direction: column;
        justify-content: left;
        align-items: flex-start;

        &__author {
          font-weight: 400;
          font-size: 16px;
          line-height: 19.36px;
          color: rgba(149, 149, 149, 1);
          margin-bottom: 8px;
        }

        &__title {
          font-weight: 400;
          font-size: 20px;
          line-height: 24.2px;
          color: rgba(0, 0, 0, 1);
          margin-bottom: 8px;
          text-decoration: none;
        }

        &__price {
          font-weight: 600;
          font-size: 20px;
          line-height: 24.2px;
          color: rgba(0, 0, 0, 1);
        }
      }
    }
  }
}

